# chai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  flake.nix
migrations/: 20250912161351_create_conversation_table.sql  20250912161612_create_message_table.sql  20250915082640_create_message_tree_table.sql
src/: main.rs
src/cli/: commands.rs  mod.rs
src/core/: assistant.rs  mod.rs  open_ai.rs  token.rs
src/database/: mod.rs  pool.rs
src/providers/open_ai/: assistant.rs  mod.rs
src/providers/open_ai/types/: body.rs  content.rs  data.rs  input.rs  message.rs  mod.rs  output.rs  response.rs  role.rs  status.rs
src/structs/: mod.rs  open_ai.rs  token.rs
