[package]
name = "chai"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.47"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
