[package]
name = "chai"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["macros", "runtime-tokio", "sqlite", "sqlx-sqlite", "tls-rustls-ring"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
